--- a/unittests_in_js/8-api/package.json
+++ b/unittests_in_js/8-api/package.json
@@ -1,21 +1,255 @@
 {
-    "name": "8-api",
-    "version": "1.0.0",
-    "main": "index.js",
-    "scripts": {
-        "test": "./node_modules/mocha/bin/mocha"
-    },
-    "author": "",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.21.1"
-    },
-    "devDependencies": {
-        "chai": "^4.5.0",
-        "mocha": "^6.2.3",
-        "request": "^2.88.2",
-        "sinon": "^7.5.0"
-    },
-    "keywords": [],
-    "description": ""
+  "name": "8-api",
+  "version": "1.0.0",
+  "main": "index.js",
+  "dependencies": {
+    "accepts": "^1.3.8",
+    "ajv": "^6.12.6",
+    "ansi-colors": "^3.2.3",
+    "ansi-regex": "^3.0.1",
+    "ansi-styles": "^3.2.1",
+    "argparse": "^1.0.10",
+    "array-buffer-byte-length": "^1.0.1",
+    "array-flatten": "^1.1.1",
+    "array-from": "^2.1.1",
+    "array.prototype.reduce": "^1.0.7",
+    "arraybuffer.prototype.slice": "^1.0.3",
+    "asn1": "^0.2.6",
+    "assert-plus": "^1.0.0",
+    "assertion-error": "^1.1.0",
+    "asynckit": "^0.4.0",
+    "available-typed-arrays": "^1.0.7",
+    "aws-sign2": "^0.7.0",
+    "aws4": "^1.13.2",
+    "balanced-match": "^1.0.2",
+    "bcrypt-pbkdf": "^1.0.2",
+    "body-parser": "^1.20.3",
+    "brace-expansion": "^1.1.11",
+    "browser-stdout": "^1.3.1",
+    "bytes": "^3.1.2",
+    "call-bind": "^1.0.7",
+    "camelcase": "^5.3.1",
+    "caseless": "^0.12.0",
+    "chai": "^4.5.0",
+    "chalk": "^2.4.2",
+    "check-error": "^1.0.3",
+    "cliui": "^5.0.0",
+    "color-convert": "^1.9.3",
+    "color-name": "^1.1.3",
+    "combined-stream": "^1.0.8",
+    "concat-map": "^0.0.1",
+    "content-disposition": "^0.5.4",
+    "content-type": "^1.0.5",
+    "cookie": "^0.7.1",
+    "cookie-signature": "^1.0.6",
+    "core-util-is": "^1.0.2",
+    "dashdash": "^1.14.1",
+    "data-view-buffer": "^1.0.1",
+    "data-view-byte-length": "^1.0.1",
+    "data-view-byte-offset": "^1.0.0",
+    "debug": "^2.6.9",
+    "decamelize": "^1.2.0",
+    "deep-eql": "^4.1.4",
+    "define-data-property": "^1.1.4",
+    "define-properties": "^1.2.1",
+    "delayed-stream": "^1.0.0",
+    "depd": "^2.0.0",
+    "destroy": "^1.2.0",
+    "diff": "^3.5.0",
+    "ecc-jsbn": "^0.1.2",
+    "ee-first": "^1.1.1",
+    "emoji-regex": "^7.0.3",
+    "encodeurl": "^2.0.0",
+    "es-abstract": "^1.23.5",
+    "es-array-method-boxes-properly": "^1.0.0",
+    "es-define-property": "^1.0.0",
+    "es-errors": "^1.3.0",
+    "es-object-atoms": "^1.0.0",
+    "es-set-tostringtag": "^2.0.3",
+    "es-to-primitive": "^1.2.1",
+    "escape-html": "^1.0.3",
+    "escape-string-regexp": "^1.0.5",
+    "esprima": "^4.0.1",
+    "etag": "^1.8.1",
+    "express": "^4.21.1",
+    "extend": "^3.0.2",
+    "extsprintf": "^1.3.0",
+    "fast-deep-equal": "^3.1.3",
+    "fast-json-stable-stringify": "^2.1.0",
+    "finalhandler": "^1.3.1",
+    "find-up": "^3.0.0",
+    "flat": "^4.1.1",
+    "for-each": "^0.3.3",
+    "forever-agent": "^0.6.1",
+    "form-data": "^2.3.3",
+    "forwarded": "^0.2.0",
+    "fresh": "^0.5.2",
+    "fs.realpath": "^1.0.0",
+    "function-bind": "^1.1.2",
+    "function.prototype.name": "^1.1.6",
+    "functions-have-names": "^1.2.3",
+    "get-caller-file": "^2.0.5",
+    "get-func-name": "^2.0.2",
+    "get-intrinsic": "^1.2.4",
+    "get-symbol-description": "^1.0.2",
+    "getpass": "^0.1.7",
+    "glob": "^7.1.3",
+    "globalthis": "^1.0.4",
+    "gopd": "^1.0.1",
+    "growl": "^1.10.5",
+    "har-schema": "^2.0.0",
+    "har-validator": "^5.1.5",
+    "has-bigints": "^1.0.2",
+    "has-flag": "^3.0.0",
+    "has-property-descriptors": "^1.0.2",
+    "has-proto": "^1.0.3",
+    "has-symbols": "^1.0.3",
+    "has-tostringtag": "^1.0.2",
+    "hasown": "^2.0.2",
+    "he": "^1.2.0",
+    "http-errors": "^2.0.0",
+    "http-signature": "^1.2.0",
+    "iconv-lite": "^0.4.24",
+    "inflight": "^1.0.6",
+    "inherits": "^2.0.4",
+    "internal-slot": "^1.0.7",
+    "ipaddr.js": "^1.9.1",
+    "is-array-buffer": "^3.0.4",
+    "is-bigint": "^1.0.4",
+    "is-boolean-object": "^1.1.2",
+    "is-buffer": "^2.0.5",
+    "is-callable": "^1.2.7",
+    "is-data-view": "^1.0.1",
+    "is-date-object": "^1.0.5",
+    "is-fullwidth-code-point": "^2.0.0",
+    "is-negative-zero": "^2.0.3",
+    "is-number-object": "^1.0.7",
+    "is-regex": "^1.1.4",
+    "is-shared-array-buffer": "^1.0.3",
+    "is-string": "^1.0.7",
+    "is-symbol": "^1.0.4",
+    "is-typed-array": "^1.1.13",
+    "is-typedarray": "^1.0.0",
+    "is-weakref": "^1.0.2",
+    "isarray": "^2.0.5",
+    "isexe": "^2.0.0",
+    "isstream": "^0.1.2",
+    "js-yaml": "^3.13.1",
+    "jsbn": "^0.1.1",
+    "json-schema": "^0.4.0",
+    "json-schema-traverse": "^0.4.1",
+    "json-stringify-safe": "^5.0.1",
+    "jsprim": "^1.4.2",
+    "just-extend": "^4.2.1",
+    "locate-path": "^3.0.0",
+    "lodash": "^4.17.21",
+    "log-symbols": "^2.2.0",
+    "lolex": "^4.2.0",
+    "loupe": "^2.3.7",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.3",
+    "methods": "^1.1.2",
+    "mime": "^1.6.0",
+    "mime-db": "^1.52.0",
+    "mime-types": "^2.1.35",
+    "minimatch": "^3.0.4",
+    "minimist": "^1.2.8",
+    "mkdirp": "^0.5.4",
+    "ms": "^2.0.0",
+    "negotiator": "^0.6.3",
+    "nise": "^1.5.3",
+    "node-environment-flags": "^1.0.5",
+    "oauth-sign": "^0.9.0",
+    "object-inspect": "^1.13.3",
+    "object-keys": "^1.1.1",
+    "object.assign": "^4.1.0",
+    "object.getownpropertydescriptors": "^2.1.8",
+    "on-finished": "^2.4.1",
+    "once": "^1.4.0",
+    "p-limit": "^2.3.0",
+    "p-locate": "^3.0.0",
+    "p-try": "^2.2.0",
+    "parseurl": "^1.3.3",
+    "path-exists": "^3.0.0",
+    "path-is-absolute": "^1.0.1",
+    "path-to-regexp": "^0.1.10",
+    "pathval": "^1.1.1",
+    "performance-now": "^2.1.0",
+    "possible-typed-array-names": "^1.0.0",
+    "proxy-addr": "^2.0.7",
+    "psl": "^1.10.0",
+    "punycode": "^2.3.1",
+    "qs": "^6.13.0",
+    "range-parser": "^1.2.1",
+    "raw-body": "^2.5.2",
+    "regexp.prototype.flags": "^1.5.3",
+    "request": "^2.88.2",
+    "require-directory": "^2.1.1",
+    "require-main-filename": "^2.0.0",
+    "safe-array-concat": "^1.1.2",
+    "safe-buffer": "^5.2.1",
+    "safe-regex-test": "^1.0.3",
+    "safer-buffer": "^2.1.2",
+    "semver": "^5.7.2",
+    "send": "^0.19.0",
+    "serve-static": "^1.16.2",
+    "set-blocking": "^2.0.0",
+    "set-function-length": "^1.2.2",
+    "set-function-name": "^2.0.2",
+    "setprototypeof": "^1.2.0",
+    "side-channel": "^1.0.6",
+    "sinon": "^7.5.0",
+    "sprintf-js": "^1.0.3",
+    "sshpk": "^1.18.0",
+    "statuses": "^2.0.1",
+    "string-width": "^2.1.1",
+    "string.prototype.trim": "^1.2.9",
+    "string.prototype.trimend": "^1.0.8",
+    "string.prototype.trimstart": "^1.0.8",
+    "strip-ansi": "^4.0.0",
+    "strip-json-comments": "^2.0.1",
+    "supports-color": "^6.0.0",
+    "toidentifier": "^1.0.1",
+    "tough-cookie": "^2.5.0",
+    "tunnel-agent": "^0.6.0",
+    "tweetnacl": "^0.14.5",
+    "type-detect": "^4.1.0",
+    "type-is": "^1.6.18",
+    "typed-array-buffer": "^1.0.2",
+    "typed-array-byte-length": "^1.0.1",
+    "typed-array-byte-offset": "^1.0.2",
+    "typed-array-length": "^1.0.6",
+    "unbox-primitive": "^1.0.2",
+    "unpipe": "^1.0.0",
+    "uri-js": "^4.4.1",
+    "utils-merge": "^1.0.1",
+    "uuid": "^3.4.0",
+    "vary": "^1.1.2",
+    "verror": "^1.10.0",
+    "which": "^1.3.1",
+    "which-boxed-primitive": "^1.0.2",
+    "which-module": "^2.0.1",
+    "which-typed-array": "^1.1.15",
+    "wide-align": "^1.1.3",
+    "wrap-ansi": "^5.1.0",
+    "wrappy": "^1.0.2",
+    "y18n": "^4.0.3",
+    "yargs": "^13.3.2",
+    "yargs-parser": "^13.1.2",
+    "yargs-unparser": "^1.6.0"
+    
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.2",
+    "request": "^2.88.0",
+    "sinon": "^7.5.0"
+  },
+  "scripts": {
+    "test": "./node_modules/mocha/bin/mocha"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
